hphp/test/slow/strict/array_fill_keys_error.php.expectf
Fatal error: keys must be ints or strings in %s/test/slow/strict/array_fill_keys_error.php on line 9
